src/assets/card.css
.game-card {
    background-color: transparent;
    width: 150px;
    height: 200px;
    perspective: 1000px;
    transition: transform 0.2s linear;
    margin-bottom: 24px;
    margin-right: 10px;
    /* margin: 1rem auto; */
}

.dark {
    width: 300px !important;
    min-height: 400px !important;
    font-size: 25px;
}

.dark .game-card-front,
.dark .game-card-back {
    background: var(--color-card-black) !important;
    color: var(--color-card-black-text) !important;
}

.game-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.game-card-inner > * {
    transition: background-color 0.25s;
}

.game-card-inner,
.game-card-front,
.game-card-back {
    border-radius: 20px;
}

.game-card:hover {
    transform: scale(1.025);
}

.active .game-card-inner {
    transform: rotateY(180deg);
}

.game-card-front,
.game-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    padding: 10px 15px;
}

.game-card-front {
    background-color: var(--color-card-white);
    background-size: contain;
    background-repeat: no-repeat;
    background-position-y: center;
}

.game-card-front .icon {
    transform-style: unset;
    width: 100%;
    height: 100%;
}

.game-card-back {
    background-color: var(--color-card-white);
    z-index: 0;
    color: var(--color-card-white-text);
    transform: rotateY(180deg);
    overflow-wrap: break-word;
    overflow-y: auto;
}

.card_input {
    color: var(--color-card-white);
    font-weight: bold;
}

